Update the notebook.

--- a/euclidean_geometry.ipynb
+++ b/euclidean_geometry.ipynb
@@ -18,14 +18,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%pylab inline\n",
+    "\n",
+    "pylab.rcParams['figure.figsize'] = (6, 6)\n",
+    "\n",
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from mpl_toolkits.mplot3d import axes3d\n",
     "\n",
     "from ipywidgets import interact"
    ]
@@ -34,7 +38,346 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Line equation"
+    "## 2D transformations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot2d(x, fmt=\"ok\"):\n",
+    "    plt.axis('equal')\n",
+    "\n",
+    "    plt.axis([-5, 5, -5, 5])\n",
+    "    plt.xticks(np.arange(-5, 5, 1))\n",
+    "    plt.yticks(np.arange(-5, 5, 1))\n",
+    "\n",
+    "    plt.axhline(y=0, color='k')\n",
+    "    plt.axvline(x=0, color='k')\n",
+    "\n",
+    "    plt.plot(x[:,0], x[:,1], fmt)\n",
+    "\n",
+    "    plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotation around the origin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "R(\\theta) =\n",
+    "\\begin{pmatrix}\n",
+    "    \\cos \\theta & -\\sin \\theta \\\\\n",
+    "    \\sin \\theta & \\cos \\theta\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "<img src=\"https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Mog_rotacion_vector.jpg/263px-Mog_rotacion_vector.jpg\"></img>\n",
+    "\n",
+    "$$\n",
+    "\\begin{pmatrix}\n",
+    "    A'_{x} \\\\\n",
+    "    A'_{y}\n",
+    "\\end{pmatrix}\n",
+    "=\n",
+    "\\begin{pmatrix}\n",
+    "    \\cos \\theta & -\\sin \\theta \\\\\n",
+    "    \\sin \\theta &\\cos \\theta \\\\\n",
+    "\\end{pmatrix}\n",
+    "\\begin{pmatrix}\n",
+    "    A_{x} \\\\\n",
+    "    A_{y}\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "See: https://fr.wikipedia.org/wiki/Matrice_de_rotation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Define initial points\n",
+    "A = np.array([[0., 0.],\n",
+    "              [1., 0.],\n",
+    "              [1., 1.],\n",
+    "              [0., 0.]])\n",
+    "\n",
+    "# Define the rotation angle\n",
+    "theta = np.radians(30)\n",
+    "\n",
+    "# Define the rotation matrix\n",
+    "R = np.array([[np.cos(theta), -np.sin(theta)],\n",
+    "              [np.sin(theta),  np.cos(theta)]])\n",
+    "\n",
+    "# Rotate points\n",
+    "Aprime = np.dot(R, A.T).T\n",
+    "\n",
+    "# Print and plot\n",
+    "print(A)\n",
+    "print(Aprime)\n",
+    "\n",
+    "plot2d(A, fmt=\"-ok\")\n",
+    "plot2d(Aprime, fmt=\"-or\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3D transformations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot3d(x, axis=None, fmt=\"ok\"):\n",
+    "    if axis is None:\n",
+    "        fig = plt.figure()\n",
+    "        axis = axes3d.Axes3D(fig)\n",
+    "        \n",
+    "    axis.scatter(x[:,0], x[:,1], x[:,2], fmt)\n",
+    "    axis.plot(x[:,0], x[:,1], x[:,2], fmt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotation around the x axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "R_{\\mathbf {x}}(\\theta) =\n",
+    "\\begin{pmatrix}\n",
+    "    1& 0           & 0 \\\\\n",
+    "    0& \\cos \\theta & -\\sin \\theta \\\\\n",
+    "    0& \\sin \\theta & \\cos \\theta\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "See: https://fr.wikipedia.org/wiki/Matrice_de_rotation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotation around the y axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "R_{\\mathbf {y}}(\\theta )\n",
+    "=\n",
+    "\\begin{pmatrix}\n",
+    "    \\cos \\theta  & 0 & \\sin \\theta \\\\\n",
+    "    0            & 1 & 0 \\\\\n",
+    "    -\\sin \\theta & 0 & \\cos \\theta\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "See: https://fr.wikipedia.org/wiki/Matrice_de_rotation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotation around the z axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "R_{\\mathbf {z}}(\\theta )\n",
+    "=\n",
+    "\\begin{pmatrix}\n",
+    "    \\cos \\theta & -\\sin \\theta & 0 \\\\\n",
+    "    \\sin \\theta & \\cos \\theta  & 0 \\\\\n",
+    "    0           & 0            & 1\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "See: https://fr.wikipedia.org/wiki/Matrice_de_rotation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Define initial points\n",
+    "A = np.array([[0., 0., 0.],\n",
+    "              [1., 0., 0.],\n",
+    "              [0., 0., 0.],\n",
+    "              [0., 1., 0.],\n",
+    "              [0., 0., 0.],\n",
+    "              [0., 0., 1.]])\n",
+    "\n",
+    "# Define the rotation angle\n",
+    "theta = np.radians(90)\n",
+    "\n",
+    "# Define the rotation matrices\n",
+    "Rx = np.array([[1., 0.,            0.],\n",
+    "               [0., np.cos(theta), -np.sin(theta)],\n",
+    "               [0., np.sin(theta), np.cos(theta)]])\n",
+    "\n",
+    "Ry = np.array([[np.cos(theta),  0., np.sin(theta)],\n",
+    "               [0.,             1., 0.           ],\n",
+    "               [-np.sin(theta), 0., np.cos(theta)]])\n",
+    "\n",
+    "Rz = np.array([[np.cos(theta), -np.sin(theta), 0.],\n",
+    "               [np.sin(theta),  np.cos(theta), 0.],\n",
+    "               [0.,             0.,            1.]])\n",
+    "\n",
+    "# Rotate points\n",
+    "Ax = np.dot(Rx, A.T).T\n",
+    "Ay = np.dot(Ry, A.T).T\n",
+    "Az = np.dot(Rz, A.T).T\n",
+    "\n",
+    "# Plot\n",
+    "fig = plt.figure()\n",
+    "ax = axes3d.Axes3D(fig)\n",
+    "plot3d(A, axis=ax, fmt=\"-ok\")\n",
+    "plot3d(Ax, axis=ax, fmt=\":or\")\n",
+    "plot3d(Ay, axis=ax, fmt=\":og\")\n",
+    "plot3d(Az, axis=ax, fmt=\":ob\")\n",
+    "ax.text(1, 0, 0, \"x\", color=\"r\")\n",
+    "ax.text(0, 1, 0, \"y\", color=\"g\")\n",
+    "ax.text(0, 0, 1, \"z\", color=\"b\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Rotation around a given axis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Rotation around the axis defined by the unit vector $\\overrightarrow{u} \\begin{pmatrix} u_{x} \\\\ u_{y} \\\\ u_{z} \\end{pmatrix}$ (i.e. with $u_{x}^{2}+u_{y}^{2}+u_{z}^{2}=1$) by an angle $\\theta$.\n",
+    "\n",
+    "$$\n",
+    "R = \n",
+    "\\begin{pmatrix}\n",
+    "    u_{x}^{2}(1-c)+c       & u_{x}u_{y}(1-c)-u_{z}s & u_{x}u_{z}(1-c)+u_{y}s \\\\\n",
+    "    u_{x}u_{y}(1-c)+u_{z}s & u_{y}^{2}(1-c)+c       & u_{y}u_{z}(1-c)-u_{x}s \\\\\n",
+    "    u_{x}u_{z}(1-c)-u_{y}s & u_{y}u_{z}(1-c)+u_{x}s & u_{z}^{2}(1-c)+c\n",
+    "\\end{pmatrix}\n",
+    "$$\n",
+    "\n",
+    "where $c = \\cos(\\theta)$ and $s = \\sin(\\theta)$\n",
+    "\n",
+    "See https://fr.wikipedia.org/wiki/Matrice_de_rotation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "# Define initial points\n",
+    "A = np.array([[0., 0., 0.],\n",
+    "              [1., 0., 0.],\n",
+    "              [0., 0., 0.],\n",
+    "              [0., 1., 0.],\n",
+    "              [0., 0., 0.],\n",
+    "              [0., 0., 1.]])\n",
+    "\n",
+    "# Define the rotation angle\n",
+    "theta = np.radians(10)\n",
+    "\n",
+    "u = np.array([1., 1., 0.])\n",
+    "ux, uy, uz = u[0], u[1], u[2]\n",
+    "\n",
+    "c = np.cos(theta)\n",
+    "s = np.sin(theta)\n",
+    "\n",
+    "# Define the rotation matrices\n",
+    "R = np.array([[ux**2 * (1-c) + c,     ux*uy * (1-c) - uz*s,  ux*uz * (1-c) + uy*s],\n",
+    "              [ux*uy * (1-c) + uz*s,  ux**2 * (1-c) + c,     uy*uz * (1-c) - ux*s],\n",
+    "              [ux*uz * (1-c) - uy*s,  uy*uz * (1-c) + ux*s,  uz**2 * (1-c) + c]])\n",
+    "\n",
+    "# Rotate points\n",
+    "Ar = np.dot(R, A.T).T\n",
+    "\n",
+    "# Plot\n",
+    "fig = plt.figure()\n",
+    "ax = axes3d.Axes3D(fig)\n",
+    "plot3d(A,  axis=ax, fmt=\"-ok\")\n",
+    "plot3d(np.array([np.zeros(3), u]),  axis=ax, fmt=\"--ok\")\n",
+    "plot3d(Ar, axis=ax, fmt=\":or\")\n",
+    "ax.text(1, 0, 0, \"x\", color=\"k\")\n",
+    "ax.text(0, 1, 0, \"y\", color=\"k\")\n",
+    "ax.text(0, 0, 1, \"z\", color=\"k\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Projections"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Project 2D points on a line"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Line equation"
    ]
   },
   {
@@ -68,14 +411,14 @@
     "collapsed": true
    },
    "source": [
-    "## Distance from a point to a line"
+    "#### Distance from a point to a line"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Line defined by an equation"
+    "##### Line defined by an equation"
    ]
   },
   {
@@ -163,7 +506,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Line defined by two points"
+    "##### Line defined by two points"
    ]
   },
   {
@@ -195,7 +538,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Line defined by a point and an angle"
+    "##### Line defined by a point and an angle"
    ]
   },
   {
@@ -237,13 +580,194 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Project 3D points on a plane without perspective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Project 3D points on a plane with perspective"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following variables are defined to describe this transformation:\n",
+    "\n",
+    "* $\\mathbf{a}_{x,y,z}$: the 3D position of a point A that is to be projected.\n",
+    "* $\\mathbf{c}_{x,y,z}$: the 3D position of a point C representing the camera.\n",
+    "* $\\mathbf{\\theta}_{x,y,z}$: the orientation of the camera (represented by Tait\u2013Bryan angles).\n",
+    "* $\\mathbf{e}_{x,y,z}$: the viewer's position relative to the display surface which goes through point C representing the camera.\n",
+    "\n",
+    "Which results in:\n",
+    "\n",
+    "* $\\mathbf {b} _{x,y}$: the 2D projection of a $\\mathbf{a}$\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "    \\mathbf {d} _{x} \\\\\n",
+    "    \\mathbf {d} _{y} \\\\\n",
+    "    \\mathbf {d} _{z} \\\\\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "    1 & 0                          & 0 \\\\\n",
+    "    0 & \\cos(\\mathbf{\\theta}_{x})  & \\sin(\\mathbf{\\theta}_{x}) \\\\\n",
+    "    0 & -\\sin(\\mathbf{\\theta}_{x}) & \\cos(\\mathbf{\\theta}_{x}) \\\\\n",
+    "\\end{bmatrix}\n",
+    "~\n",
+    "\\begin{bmatrix}\n",
+    "    \\cos(\\mathbf{\\theta}_{y}) & 0 & -\\sin(\\mathbf{\\theta}_{y}) \\\\\n",
+    "    0                         & 1 & 0 \\\\\n",
+    "    \\sin(\\mathbf{\\theta}_{y}) & 0 & \\cos(\\mathbf{\\theta}_{y}) \\\\\n",
+    "\\end{bmatrix}\n",
+    "~\n",
+    "\\begin{bmatrix}\n",
+    "    \\cos(\\mathbf{\\theta}_{z})  & \\sin(\\mathbf{\\theta}_{z}) & 0 \\\\\n",
+    "    -\\sin(\\mathbf{\\theta}_{z}) & \\cos(\\mathbf{\\theta}_{z}) & 0 \\\\\n",
+    "    0                          & 0                         & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "~\n",
+    "\\left(\n",
+    "\\begin{bmatrix}\n",
+    "    \\mathbf{a}_{x} \\\\\n",
+    "    \\mathbf{a}_{y} \\\\\n",
+    "    \\mathbf{a}_{z} \\\\\n",
+    "\\end{bmatrix}\n",
+    "-\n",
+    "\\begin{bmatrix}\n",
+    "    \\mathbf{c}_{x} \\\\\n",
+    "    \\mathbf{c}_{y} \\\\\n",
+    "    \\mathbf{c}_{z} \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\right)\n",
+    "$$\n",
+    "\n",
+    "This transformed point can then be projected onto the 2D plane using the formula (here, x/y is used as the projection plane; literature also may use x/z):\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{lcl}\n",
+    "    \\mathbf{b}_{x} & = & \\frac{\\mathbf{e}_{z}}{\\mathbf{d}_{z}} \\mathbf{d}_{x} - \\mathbf{e}_{x}\\\\\n",
+    "    \\mathbf{b}_{y} & = & \\frac{\\mathbf{e}_{z}}{\\mathbf{d}_{z}} \\mathbf{d}_{y} - \\mathbf{e}_{y}\\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "See: https://en.wikipedia.org/wiki/3D_projection#Perspective_projection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Define initial points to project\n",
+    "a = np.array([3., 0., 0.])\n",
+    "\n",
+    "# Define camera's position\n",
+    "c = np.array([1., 0., 0.])\n",
+    "\n",
+    "# Define viewer's position\n",
+    "e = np.array([0., 0., 0.])\n",
+    "\n",
+    "# Define the orientation of the camera\n",
+    "theta = np.array([np.radians(0),\n",
+    "                  np.radians(0),\n",
+    "                  np.radians(0)])\n",
+    "theta_x, theta_y, theta_z = theta[0], theta[1], theta[2]\n",
+    "\n",
+    "# Define the rotation matrices\n",
+    "Rx = np.array([[1., 0.,               0.],\n",
+    "               [0., np.cos(theta_x),  np.sin(theta_x)],\n",
+    "               [0., -np.sin(theta_x), np.cos(theta_x)]])\n",
+    "\n",
+    "Ry = np.array([[np.cos(theta_y),  0., -np.sin(theta_y)],\n",
+    "               [0.,               1., 0.           ],\n",
+    "               [np.sin(theta_y),  0., np.cos(theta_y)]])\n",
+    "\n",
+    "Rz = np.array([[np.cos(theta_z),  np.sin(theta_z), 0.],\n",
+    "               [-np.sin(theta_z), np.cos(theta_z), 0.],\n",
+    "               [0.,               0.,              1.]])\n",
+    "\n",
+    "d = np.dot(Rx, Ry)\n",
+    "d = np.dot(d, Rz)\n",
+    "d = np.dot(d, a-c)\n",
+    "\n",
+    "#d = a - c\n",
+    "#d = np.dot(Rz, d)\n",
+    "#d = np.dot(Ry, d)\n",
+    "#d = np.dot(Rx, d)\n",
+    "\n",
+    "print(d)\n",
+    "\n",
+    "b = np.array([e[2]/d[2] * d[0] - e[0],\n",
+    "              e[2]/d[2] * d[1] - e[1]])\n",
+    "\n",
+    "print(b)\n",
+    "\n",
+    "# TODO: how is defined the angle of view (the \"focal\") ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\n",
+    "## Sandbox\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "### Normal vector"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "plt.axis('equal')\n",
+    "\n",
+    "plt.axis([-5, 5, -5, 5])\n",
+    "plt.xticks(np.arange(-5, 5, 1))\n",
+    "plt.yticks(np.arange(-5, 5, 1))\n",
+    "\n",
+    "plt.axhline(y=0, color='k')\n",
+    "plt.axvline(x=0, color='k')\n",
+    "\n",
+    "x = np.arange(-5, 5, 1)\n",
+    "\n",
+    "a, b = 0.5, 1.\n",
+    "y = a * x + b\n",
+    "\n",
+    "plt.plot(x, y, \"-r\")\n",
+    "\n",
+    "plt.plot([0, -a], [0, 1], \"-r\")\n",
+    "\n",
+    "plt.grid()"
+   ]
   }
  ],
  "metadata": {
