Update the notebook.

--- a/fourier_transform.ipynb
+++ b/fourier_transform.ipynb
@@ -4,32 +4,114 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline"
+    "%pylab inline\n",
+    "\n",
+    "pylab.rcParams['figure.figsize'] = (6, 6)\n",
+    "\n",
+    "import math\n",
+    "import cmath          # math functions for complex numbers\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import ipywidgets\n",
+    "from ipywidgets import interact"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "TODO:\n",
+    "**TODO**:\n",
     "- ajouter notation simplifi\u00e9e\n",
     "    - fourier-transform-introduction\n",
     "    - fourier-transform-slides\n",
     "    - slides de Bologne\n",
+    "- ajouter un plot interactif de f(t) (fonction 1D) pour les vecteurs (numpy) de coefs a et b donn\u00e9s\n",
+    "- ajouter un plot interactif pour calculer les vecteurs a et b d'une fonction 1D donn\u00e9e\n",
     "- finir notation JL\n",
     "    - sine transform\n",
-    "    - cosine transform"
+    "    - cosine transform\n",
+    "- implementations python avec scipy"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Fast Fourier Transform"
+    "## The Fourier Transform"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following notations come from the following book: *Toutes les math\u00e9matiques et les bases de l'informatique*, Horst St\u00f6cker (Dunod, 2002)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TODO..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def plot(a, b):\n",
+    "    plt.axis('equal')\n",
+    "    \n",
+    "    plt.axis([-2.*np.pi, 2.*np.pi, -2.*np.pi, 2.*np.pi])\n",
+    "    plt.xticks(np.arange(-2.*np.pi, 2.*np.pi, 1))\n",
+    "    plt.yticks(np.arange(-2.*np.pi, 2.*np.pi, 1))\n",
+    "    \n",
+    "    plt.axhline(y=0, color='k')\n",
+    "    plt.axvline(x=0, color='k')\n",
+    "    \n",
+    "    t = np.arange(-math.pi, math.pi, 0.1)\n",
+    "    y = a * np.cos(t) + b * np.sin(t)\n",
+    "    plt.plot(t, y, \"-r\",\n",
+    "             t, a*np.cos(t), \"--k\",\n",
+    "             t, b*np.sin(t), \"--k\",\n",
+    "             a*np.cos(t), b*np.sin(t), \"--b\")\n",
+    "    \n",
+    "    plt.grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "@interact(a=(-5., 5.), b=(-5., 5.))\n",
+    "def cos_sin(a, b):\n",
+    "    plot(a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Fast Fourier Transform (J.-L. Stark's notation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The following notations come from the following book: *Astronomical Image and Data Analysis*, J.-L. Stark and F. Murtagh (Springer, 2002)"
    ]
   },
   {
