--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -8,6 +8,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**TODO**:\n",
+    "* howto avoid loosing matplotlib interactive rendering when a document is converted to HTML ?\n",
+    "  * https://www.reddit.com/r/IPython/comments/36p360/try_matplotlib_notebook_for_interactive_plots/\n",
+    "  * http://stackoverflow.com/questions/36151181/exporting-interactive-jupyter-notebook-to-html\n",
+    "  * https://jakevdp.github.io/blog/2013/12/05/static-interactive-widgets/\n",
+    "* table of contents (JS)\n",
+    "* matplotlib / D3.js interaction\n",
+    "* matplotlib animations: how to make it faster\n",
+    "* inspiration\n",
+    "  * http://louistiao.me/posts/notebooks/embedding-matplotlib-animations-in-jupyter-notebooks/\n",
+    "  * https://github.com/ltiao/notebooks\n",
+    "  * https://blog.dominodatalab.com/lesser-known-ways-of-using-notebooks/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -53,11 +71,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib notebook\n",
+    "\n",
+    "# As an alternative, one may use: %pylab notebook\n",
+    "\n",
+    "# For old Matplotlib and Ipython versions, use the non-interactive version:\n",
+    "# %matplotlib inline or %pylab inline\n",
+    "\n",
+    "# To ignore warnings (http://stackoverflow.com/questions/9031783/hide-all-warnings-in-ipython)\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -142,8 +170,19 @@
    "metadata": {},
    "source": [
     "To plot a figure within a notebook, insert the\n",
-    "```%matplotlib inline```\n",
-    "directive at the begining of the document."
+    "```%matplotlib notebook``` (or ```%pylab notebook```)\n",
+    "directive at the begining of the document.\n",
+    "\n",
+    "As an alternative, one may use\n",
+    "```%matplotlib inline``` (or ```%pylab inline```)\n",
+    "for non-interactive plots on old Matplotlib/Ipython versions."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2D plots"
    ]
   },
   {
@@ -157,6 +196,75 @@
     "x = np.arange(-2 * np.pi, 2 * np.pi, 0.1)\n",
     "y = np.sin(x)\n",
     "plt.plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3D plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from mpl_toolkits.mplot3d import axes3d\n",
+    "\n",
+    "# Build datas ###############\n",
+    "\n",
+    "x = np.arange(-5, 5, 0.25)\n",
+    "y = np.arange(-5, 5, 0.25)\n",
+    "\n",
+    "xx,yy = np.meshgrid(x, y)\n",
+    "z = np.sin(np.sqrt(xx**2 + yy**2))\n",
+    "\n",
+    "# Plot data #################\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "ax = axes3d.Axes3D(fig)\n",
+    "ax.plot_wireframe(xx, yy, z)\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Animations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from matplotlib.animation import FuncAnimation\n",
+    "\n",
+    "# Plots\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "def update(frame):\n",
+    "    x = np.arange(frame/10., frame/10. + 2. * math.pi, 0.1)\n",
+    "    ax.clear()\n",
+    "    ax.plot(x, np.cos(x))\n",
+    "\n",
+    "    # Optional: save plots\n",
+    "    filename = \"img_{:03}.png\".format(frame)\n",
+    "    plt.savefig(filename)\n",
+    "\n",
+    "# Note: \"interval\" is in ms\n",
+    "anim = FuncAnimation(fig, update, interval=100)\n",
+    "\n",
+    "plt.show()"
    ]
   },
   {
@@ -1022,6 +1130,161 @@
     "        print(text.upper())\n",
     "    else:\n",
     "        print(text.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sound player widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See: https://ipython.org/ipython-doc/dev/api/generated/IPython.display.html#IPython.display.Audio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import Audio"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate a sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "framerate = 44100\n",
+    "t = np.linspace(0, 5, framerate*5)\n",
+    "data = np.sin(2*np.pi*220*t) + np.sin(2*np.pi*224*t)\n",
+    "\n",
+    "Audio(data, rate=framerate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Generate a multi-channel (stereo or more) sound"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_left = np.sin(2 * np.pi * 220 * t)\n",
+    "data_right = np.sin(2 * np.pi * 224 * t)\n",
+    "\n",
+    "Audio([data_left, data_right], rate=framerate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### From URL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Audio(\"http://www.nch.com.au/acm/8k16bitpcm.wav\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "Audio(url=\"http://www.w3schools.com/html/horse.ogg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### From file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Audio('/path/to/sound.wav')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Audio(filename='/path/to/sound.ogg')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### From bytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Audio(b'RAW_WAV_DATA..)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Audio(data=b'RAW_WAV_DATA..)"
    ]
   },
   {
