Add youtube video test.

--- a/notebook_snippets.ipynb
+++ b/notebook_snippets.ipynb
@@ -1291,6 +1291,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Youtube widget"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Class for embedding a YouTube Video in an IPython session, based on its video id.\n",
+    "e.g. to embed the video from https://www.youtube.com/watch?v=0HlRtU8clt4 , you would do:\n",
+    "\n",
+    "See https://ipython.org/ipython-doc/dev/api/generated/IPython.display.html#IPython.display.YouTubeVideo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from IPython.display import YouTubeVideo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vid = YouTubeVideo(\"0HlRtU8clt4\")\n",
+    "display(vid)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Convert a Reveal.js presentation written with Markdown to a Jupyter notebook"
    ]
   },
