--- a/euclidean_geometry.ipynb
+++ b/euclidean_geometry.ipynb
@@ -22,9 +22,12 @@
    },
    "outputs": [],
    "source": [
-    "%pylab inline\n",
+    "%pylab notebook\n",
     "\n",
     "pylab.rcParams['figure.figsize'] = (6, 6)\n",
+    "\n",
+    "#import warnings\n",
+    "#warnings.filterwarnings('ignore')\n",
     "\n",
     "import math\n",
     "import numpy as np\n",
@@ -609,7 +612,7 @@
     "* $\\mathbf{a}_{x,y,z}$: the 3D position of a point A that is to be projected.\n",
     "* $\\mathbf{c}_{x,y,z}$: the 3D position of a point C representing the camera.\n",
     "* $\\mathbf{\\theta}_{x,y,z}$: the orientation of the camera (represented by Tait\u2013Bryan angles).\n",
-    "* $\\mathbf{e}_{x,y,z}$: the viewer's position relative to the display surface which goes through point C representing the camera.\n",
+    "* $\\mathbf{e}_{x,y,z}$: the viewer's position **relative to the display surface which goes through point C** representing the camera (i.e. $\\mathbf{e}$ doesn't change with the position of the camera C and typically $\\mathbf{e} = (0, 0, -1)^T$ for a view angle of $2*\\cos^{-1}(1/\\sqrt{2})$ radians when the projection is made on the x/y plane).\n",
     "\n",
     "Which results in:\n",
     "\n",
@@ -655,14 +658,51 @@
     "\\right)\n",
     "$$\n",
     "\n",
-    "This transformed point can then be projected onto the 2D plane using the formula (here, x/y is used as the projection plane; literature also may use x/z):\n",
+    "The transformed point $\\boldsymbol d$ of $\\boldsymbol d$ can then be projected onto the 2D plane using the formula (here, **x/y is used as the projection plane**; literature also may use x/z):\n",
     "\n",
     "$$\n",
     "\\begin{array}{lcl}\n",
-    "    \\mathbf{b}_{x} & = & \\frac{\\mathbf{e}_{z}}{\\mathbf{d}_{z}} \\mathbf{d}_{x} - \\mathbf{e}_{x}\\\\\n",
-    "    \\mathbf{b}_{y} & = & \\frac{\\mathbf{e}_{z}}{\\mathbf{d}_{z}} \\mathbf{d}_{y} - \\mathbf{e}_{y}\\\\\n",
+    "    \\mathbf{b}_x & = & \\frac{\\mathbf{e}_z}{\\mathbf{d}_z} \\mathbf{d}_x - \\mathbf{e}_x \\\\\n",
+    "    \\mathbf{b}_y & = & \\frac{\\mathbf{e}_z}{\\mathbf{d}_z} \\mathbf{d}_y - \\mathbf{e}_y \\\\\n",
     "\\end{array}\n",
     "$$\n",
+    "\n",
+    "Or, in matrix form using <a href=\"https://en.wikipedia.org/wiki/Homogeneous_coordinates\">homogeneous coordinates</a>, the system\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\n",
+    "    \\mathbf{f}_x \\\\\n",
+    "    \\mathbf{f}_y \\\\\n",
+    "    \\mathbf{f}_z \\\\\n",
+    "    \\mathbf{f}_w\n",
+    "\\end{bmatrix}\n",
+    "=\n",
+    "\\begin{bmatrix}\n",
+    "    1 & 0 & -\\frac{\\mathbf{e}_x}{\\mathbf{e}_z} & 0 \\\\\n",
+    "    0 & 1 & -\\frac{\\mathbf{e}_y}{\\mathbf{e}_z} & 0 \\\\\n",
+    "    0 & 0 & 1                                  & 0 \\\\\n",
+    "    0 & 0 & \\frac{1}{\\mathbf{e}_z}             & 0\n",
+    "\\end{bmatrix}\n",
+    "\\begin{bmatrix}\n",
+    "    \\mathbf{d}_x \\\\\n",
+    "    \\mathbf{d}_y \\\\\n",
+    "    \\mathbf{d}_z \\\\\n",
+    "    1\n",
+    "\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "in conjunction with an argument using similar triangles, leads to division by the homogeneous coordinate, giving\n",
+    "\n",
+    "$$\n",
+    "\\begin{array}{lcl}\n",
+    "    \\mathbf{b}_x & = & \\mathbf{f}_x / \\mathbf{f}_w \\\\\n",
+    "    \\mathbf{b}_y & = & \\mathbf{f}_y / \\mathbf{f}_w \\\\\n",
+    "\\end{array}\n",
+    "$$\n",
+    "\n",
+    "The distance of the viewer from the display surface, $\\mathbf{e}_{z}$, directly relates to the field of view, where $\\alpha = 2 \\cdot \\tan^{-1}(\\frac{1}{\\mathbf{e}_{z}})$ is the viewed angle.\n",
+    "\n",
+    "Note: here we assume that you map the points $(-1,-1)$ and $(1,1)$ to the corners of your viewing surface.\n",
     "\n",
     "See: https://en.wikipedia.org/wiki/3D_projection#Perspective_projection"
    ]
@@ -671,23 +711,25 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# Define initial points to project\n",
-    "a = np.array([3., 0., 0.])\n",
+    "a = np.array([0., 1., 2.])\n",
     "\n",
     "# Define camera's position\n",
-    "c = np.array([1., 0., 0.])\n",
+    "c = np.array([0., 0., 0.])\n",
     "\n",
     "# Define viewer's position\n",
-    "e = np.array([0., 0., 0.])\n",
+    "e = np.array([0., 0., -1.])\n",
     "\n",
     "# Define the orientation of the camera\n",
     "theta = np.array([np.radians(0),\n",
     "                  np.radians(0),\n",
     "                  np.radians(0)])\n",
+    "\n",
     "theta_x, theta_y, theta_z = theta[0], theta[1], theta[2]\n",
     "\n",
     "# Define the rotation matrices\n",
@@ -707,19 +749,121 @@
     "d = np.dot(d, Rz)\n",
     "d = np.dot(d, a-c)\n",
     "\n",
+    "## TODO: which version is correct ? The one above or the one below ?\n",
     "#d = a - c\n",
     "#d = np.dot(Rz, d)\n",
     "#d = np.dot(Ry, d)\n",
     "#d = np.dot(Rx, d)\n",
     "\n",
-    "print(d)\n",
+    "print(\"d:\", d)\n",
     "\n",
     "b = np.array([e[2]/d[2] * d[0] - e[0],\n",
     "              e[2]/d[2] * d[1] - e[1]])\n",
     "\n",
-    "print(b)\n",
+    "print(\"b:\", b)\n",
     "\n",
-    "# TODO: how is defined the angle of view (the \"focal\") ?"
+    "# Alternative to compute b\n",
+    "Rf = np.array([[1., 0., -e[0]/e[2], 0.],\n",
+    "               [0., 1., -e[1]/e[2], 0.],\n",
+    "               [0., 0., 1.,         0.],\n",
+    "               [0., 0., 1./e[2],    0.]])\n",
+    "\n",
+    "f = np.dot(Rf, np.concatenate([d, np.ones(1)]))\n",
+    "\n",
+    "b = np.array([f[0]/f[3],\n",
+    "              f[1]/f[3]])\n",
+    "\n",
+    "print(\"b:\", b)\n",
+    "\n",
+    "plot2d(np.array([b, b]), \"ok\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multiple points version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Define initial points to project\n",
+    "A = np.array([[-1., 0., 1.],\n",
+    "              [ 1., 0., 1.],\n",
+    "              [-1., 0., 2.],\n",
+    "              [ 1., 0., 2.],\n",
+    "              [-1., 0., 5.],\n",
+    "              [ 1., 0., 5.],\n",
+    "              [-1., 0., 15.],\n",
+    "              [ 1., 0., 15.]])\n",
+    "\n",
+    "# Define camera's position\n",
+    "c = np.array([0., -2., 0.])\n",
+    "C = np.tile(c, (A.shape[0], 1))\n",
+    "\n",
+    "# Define viewer's position\n",
+    "e = np.array([0., 0., -1.])\n",
+    "\n",
+    "# Define the orientation of the camera\n",
+    "theta = np.array([np.radians(0),\n",
+    "                  np.radians(0),\n",
+    "                  np.radians(0)])\n",
+    "\n",
+    "theta_x, theta_y, theta_z = theta[0], theta[1], theta[2]\n",
+    "\n",
+    "# Define the rotation matrices\n",
+    "Rx = np.array([[1., 0.,               0.],\n",
+    "               [0., np.cos(theta_x),  np.sin(theta_x)],\n",
+    "               [0., -np.sin(theta_x), np.cos(theta_x)]])\n",
+    "\n",
+    "Ry = np.array([[np.cos(theta_y),  0., -np.sin(theta_y)],\n",
+    "               [0.,               1., 0.           ],\n",
+    "               [np.sin(theta_y),  0., np.cos(theta_y)]])\n",
+    "\n",
+    "Rz = np.array([[np.cos(theta_z),  np.sin(theta_z), 0.],\n",
+    "               [-np.sin(theta_z), np.cos(theta_z), 0.],\n",
+    "               [0.,               0.,              1.]])\n",
+    "\n",
+    "d = np.dot(Rx, Ry)\n",
+    "d = np.dot(d, Rz)\n",
+    "d = np.dot(d, (A-C).T)\n",
+    "\n",
+    "## TODO: which version is correct ? The one above or the one below ?\n",
+    "#d = a - c\n",
+    "#d = np.dot(Rz, d)\n",
+    "#d = np.dot(Ry, d)\n",
+    "#d = np.dot(Rx, d)\n",
+    "\n",
+    "print(\"d:\", d)\n",
+    "\n",
+    "b = np.array([e[2]/d[2] * d[0] - e[0],\n",
+    "              e[2]/d[2] * d[1] - e[1]])\n",
+    "\n",
+    "print(\"b:\", b)\n",
+    "\n",
+    "# Alternative to compute b\n",
+    "Rf = np.array([[1., 0., -e[0]/e[2], 0.],\n",
+    "               [0., 1., -e[1]/e[2], 0.],\n",
+    "               [0., 0., 1.,         0.],\n",
+    "               [0., 0., 1./e[2],    0.]])\n",
+    "\n",
+    "# Add a line of ones\n",
+    "d = np.vstack([d, np.ones(d.shape[1])])\n",
+    "\n",
+    "f = np.dot(Rf, d)\n",
+    "\n",
+    "b = np.array([f[0]/f[3],\n",
+    "              f[1]/f[3]])\n",
+    "\n",
+    "print(\"b:\", b)\n",
+    "\n",
+    "plot2d(np.array([b, b]), \"ok\")"
    ]
   },
   {
@@ -728,15 +872,13 @@
     "collapsed": true
    },
    "source": [
-    "\n",
-    "## Sandbox\n"
+    "## Sandbox"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "### Normal vector"
    ]
   },
