--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -57,7 +57,14 @@
    },
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "%matplotlib notebook\n",
+    "#%matplotlib inline\n",
+    "\n",
+    "from IPython.display import display\n",
+    "\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['figure.figsize'] = (9, 9)\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np"
    ]
@@ -66,14 +73,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Series (1D data)"
+    "## Make data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With automatic indices"
+    "### Series (1D data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### With automatic indices"
    ]
   },
   {
@@ -106,7 +120,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With defined indices"
+    "#### With defined indices"
    ]
   },
   {
@@ -139,14 +153,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Frames (2D data)"
+    "### Frames (2D data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With automatic indices and columns"
+    "#### With automatic indices and columns"
    ]
   },
   {
@@ -158,15 +172,15 @@
    "outputs": [],
    "source": [
     "data_array = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "serie = pd.DataFrame(data_array)\n",
-    "serie"
+    "df = pd.DataFrame(data_array)\n",
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With defined indices and columns"
+    "#### With defined indices and columns"
    ]
   },
   {
@@ -178,15 +192,15 @@
    "outputs": [],
    "source": [
     "data_array = np.array([[1, 2, 3], [4, 5, 6]])\n",
-    "serie = pd.DataFrame(data_array, index=[10, 20], columns=[100, 200, 300])\n",
-    "serie"
+    "df = pd.DataFrame(data_array, index=[10, 20], columns=[100, 200, 300])\n",
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### With columns from dict"
+    "#### With columns from dict"
    ]
   },
   {
@@ -200,15 +214,329 @@
     "data_dict = {'A': 'foo',\n",
     "             'B': [10, 20, 30],\n",
     "             'C': 3}\n",
-    "serie = pd.DataFrame(data_dict)\n",
-    "serie"
+    "df = pd.DataFrame(data_dict)\n",
+    "df"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Short instructions to read and plot a CSV file"
+    "## Select columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_array = np.array([np.arange(1, 10, 1), np.arange(10, 100, 10), np.arange(100, 1000, 100)]).T\n",
+    "df = pd.DataFrame(data_array,\n",
+    "                  index=np.arange(1, 10, 1),\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.B"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df[\"B\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.loc[:,\"B\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Select rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_array = np.array([np.arange(1, 10, 1), np.arange(10, 100, 10), np.arange(100, 1000, 100)]).T\n",
+    "df = pd.DataFrame(data_array,\n",
+    "                  index=np.arange(1, 10, 1),\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.B < 50."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df[df.B < 50.]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply a function to selected colunms values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_array = np.array([np.arange(1, 10, 1), np.arange(10, 100, 10), np.arange(100, 1000, 100)]).T\n",
+    "df = pd.DataFrame(data_array,\n",
+    "                  index=np.arange(1, 10, 1),\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.B *= 2.\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df.B = pow(df.B, 2)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Apply a function to selected rows values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "data_array = np.array([np.arange(1, 10, 1), np.arange(10, 100, 10), np.arange(100, 1000, 100)]).T\n",
+    "df = pd.DataFrame(data_array,\n",
+    "                  index=np.arange(1, 10, 1),\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df[df.B < 50.] *= -1.\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "df[df.B < 50.] = pow(df[df.B < 50.], 2)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Merge"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See: http://pandas.pydata.org/pandas-docs/stable/generated/pandas.merge.html#pandas.merge"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "a1 = np.array([np.arange(1, 5, 1), np.arange(10, 50, 10), np.arange(100, 500, 100)]).T\n",
+    "df1 = pd.DataFrame(a1,\n",
+    "                   columns=['ID', 'B', 'C'])\n",
+    "\n",
+    "a2 = np.array([np.arange(1, 5, 1), np.arange(1000, 5000, 1000), np.arange(10000, 50000, 10000)]).T\n",
+    "df2 = pd.DataFrame(a2,\n",
+    "                   columns=['ID', 'B', 'C'])\n",
+    "\n",
+    "display(df1)\n",
+    "display(df2)\n",
+    "\n",
+    "df = pd.merge(df1, df2, on=\"ID\", suffixes=('_1', '_2'))  #.dropna(how='any')\n",
+    "\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge with NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a1 = np.array([np.arange(1, 5, 1), np.arange(10, 50, 10), np.arange(100, 500, 100)]).T\n",
+    "df1 = pd.DataFrame(a1,\n",
+    "                   columns=['ID', 'B', 'C'])\n",
+    "\n",
+    "a2 = np.array([np.arange(1, 5, 1), np.arange(1000, 5000, 1000), np.arange(10000, 50000, 10000)]).T\n",
+    "df2 = pd.DataFrame(a2,\n",
+    "                   columns=['ID', 'B', 'C'])\n",
+    "\n",
+    "df1.iloc[0,2] = np.nan\n",
+    "df1.iloc[1,1] = np.nan\n",
+    "df1.iloc[2,2] = np.nan\n",
+    "df1.iloc[3,1] = np.nan\n",
+    "\n",
+    "df2.iloc[0,1] = np.nan\n",
+    "df2.iloc[1,2] = np.nan\n",
+    "df2.iloc[2,1] = np.nan\n",
+    "df2.iloc[3,2] = np.nan\n",
+    "\n",
+    "df = pd.merge(df1, df2, on=\"ID\", suffixes=('_1', '_2'))  #.dropna(how='any')\n",
+    "\n",
+    "display(df1)\n",
+    "display(df2)\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Merge with missing rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a1 = np.array([np.arange(1, 5, 1), np.arange(10, 50, 10), np.arange(100, 500, 100)]).T\n",
+    "df1 = pd.DataFrame(a1,\n",
+    "                   columns=['ID', 'B', 'C'])\n",
+    "\n",
+    "a2 = np.array([np.arange(1, 3, 1), np.arange(1000, 3000, 1000), np.arange(10000, 30000, 10000)]).T\n",
+    "df2 = pd.DataFrame(a2,\n",
+    "                   columns=['ID', 'B', 'C'])\n",
+    "\n",
+    "display(df1)\n",
+    "display(df2)\n",
+    "\n",
+    "print(\"Left: use only keys from left frame (SQL: left outer join)\")\n",
+    "df = pd.merge(df1, df2, on=\"ID\", how=\"left\", suffixes=('_1', '_2'))  #.dropna(how='any')\n",
+    "display(df)\n",
+    "\n",
+    "print(\"Right: use only keys from right frame (SQL: right outer join)\")\n",
+    "df = pd.merge(df1, df2, on=\"ID\", how=\"right\", suffixes=('_1', '_2'))  #.dropna(how='any')\n",
+    "display(df)\n",
+    "\n",
+    "print(\"Inner: use intersection of keys from both frames (SQL: inner join) [DEFAULT]\")\n",
+    "df = pd.merge(df1, df2, on=\"ID\", how=\"inner\", suffixes=('_1', '_2'))  #.dropna(how='any')\n",
+    "display(df)\n",
+    "\n",
+    "print(\"Outer: use union of keys from both frames (SQL: full outer join)\")\n",
+    "df = pd.merge(df1, df2, on=\"ID\", how=\"outer\", suffixes=('_1', '_2'))  #.dropna(how='any')\n",
+    "display(df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save and read a CSV file"
    ]
   },
   {
@@ -219,7 +547,24 @@
    },
    "outputs": [],
    "source": [
-    "#gam = pd.read_csv(\"foo.csv.gz\").groupby('JSON input file')\n",
+    "#gam = pd.read_csv(\"foo.csv.gz\").groupby('JSON input file')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
     "#gam['e_shape'].plot.hist(alpha=0.2, bins=100, legend=True)"
    ]
   }
