--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -536,6 +536,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## GroupBy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See: http://pandas.pydata.org/pandas-docs/stable/groupby.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "a = np.array([[3, 5, 5, 5, 7, 7, 7, 7],\n",
+    "              [2, 4, 4, 3, 1, 3, 3, 2],\n",
+    "              [3, 4, 5, 6, 1, 8, 9, 8]]).T\n",
+    "df = pd.DataFrame(a,\n",
+    "                  columns=['A', 'B', 'C'])\n",
+    "\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GroupBy with single key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby([\"A\"]).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GroupBy with multiple keys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "df.groupby([\"A\",\"B\"]).count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Save and read a CSV file"
    ]
   },
