--- a/mandelbrot.ipynb
+++ b/mandelbrot.ipynb
@@ -11,8 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook comes from the following snippet:\n",
+    "https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py\n",
+    "\n",
     "To display this notebook on nbviewer.jupyter.org, visit the following link:\n",
     "http://nbviewer.jupyter.org/url/download.tuxfamily.org/jdhp/notebook/notebook/mandelbrot.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py"
    ]
   },
   {
@@ -41,18 +55,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "# %load https://raw.githubusercontent.com/jeremiedecock/snippets/master/python/matplotlib/mandelbrot/mandelbrot.py\n",
-    "\n",
-    "REAL_RANGE = np.arange(-2.0, 1.0, 0.05).tolist()\n",
-    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.05).tolist()\n",
-    "\n",
     "EPSILON_MAX = 2.\n",
     "NUM_IT_MAX = 32\n",
-    "\n",
     "Z_INIT = complex(0, 0)\n",
     "\n",
     "def mandelbrot(x, y):\n",
@@ -68,30 +76,36 @@
     "    # To print all levels\n",
     "    return it\n",
     "\n",
-    "    ## To print only the level N\n",
+    "    ## To print only the level #N\n",
     "    #if it < N:\n",
     "    #    return 1\n",
     "    #else:\n",
-    "    #    return 0\n",
-    "    \n",
+    "    #    return 0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "REAL_RANGE = np.arange(-2.0, 1.0, 0.05).tolist()\n",
+    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.05).tolist()\n",
     "\n",
     "# Compute datas #############\n",
-    "\n",
     "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
-    "\n",
     "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
     "\n",
     "# Plot data #################\n",
-    "\n",
     "fig = plt.figure()\n",
     "ax = axes3d.Axes3D(fig)\n",
     "\n",
     "# Plot mean surface\n",
-    "\n",
     "ax.plot_surface(xgrid, ygrid, data, cmap=cm.jet, rstride=1, cstride=1, color='b', shade=True)\n",
     "\n",
-    "# Title, etc.\n",
-    "\n",
+    "# Set title and labels\n",
     "plt.title(\"Mandelbrot set\")\n",
     "ax.set_xlabel(\"Re(c)\")\n",
     "ax.set_ylabel(\"Im(c)\")\n",
