--- a/mandelbrot.ipynb
+++ b/mandelbrot.ipynb
@@ -111,6 +111,36 @@
     "ax.set_ylabel(\"Im(c)\")\n",
     "ax.set_zlabel(\"Color\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Plot data #################\n",
+    "\n",
+    "REAL_RANGE = np.arange(-2.0, 1.0, 0.005).tolist()\n",
+    "IMAG_RANGE = np.arange(-1.2, 1.2, 0.005).tolist()\n",
+    "\n",
+    "# Compute datas #############\n",
+    "\n",
+    "xgrid, ygrid = np.meshgrid(REAL_RANGE, IMAG_RANGE)\n",
+    "data = np.array([mandelbrot(x, y) for y in IMAG_RANGE for x in REAL_RANGE]).reshape(len(IMAG_RANGE), len(REAL_RANGE))\n",
+    "\n",
+    "# Plot data #################\n",
+    "fig, ax = plt.subplots()\n",
+    "\n",
+    "# Plot mean surface\n",
+    "ax.imshow(data, extent=[xgrid.min(), xgrid.max(), ygrid.min(), ygrid.max()], interpolation=\"bicubic\")\n",
+    "\n",
+    "# Set title and labels\n",
+    "plt.title(\"Mandelbrot set\")\n",
+    "ax.set_xlabel(\"Re(c)\")\n",
+    "ax.set_ylabel(\"Im(c)\")"
+   ]
   }
  ],
  "metadata": {
