--- a/sympy_calculus.ipynb
+++ b/sympy_calculus.ipynb
@@ -494,6 +494,30 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "integ = sp.Integral(sp.cos(x), (x, -sp.oo, sp.oo))\n",
+    "sp.Eq(integ, integ.doit())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "integ = sp.Integral(sp.cos(x), (x, -sp.pi, sp.pi))\n",
+    "sp.Eq(integ, integ.doit())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false,
     "scrolled": true
    },
